Update to app-root, add store

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Notes</title>
+    <title>App</title>
 </head>
 <body>
-    <notes-app></notes-app>
+    <app-root></app-root>
     <script src="bundle.js"></script>
 </body>
 </html>
