--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <app-root></app-root>
-    <script src="bundle.js"></script>
+    <script src="/bundle.js"></script>
 </body>
 </html>
